# docs/openapi.yaml
@@ -292,23 +292,27 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                D:
-                  $ref: '#/components/schemas/assessment/properties/D'
-                A:
-                  $ref: '#/components/schemas/assessment/properties/A'
-                S:
-                  $ref: '#/components/schemas/assessment/properties/S'
-                keluhanTambahan:
-                  $ref: '#/components/schemas/assessment/properties/keluhanTambahan'
+              $ref: '#/components/schemas/assessment/properties/assessment'
+
       responses:
         '200':
           description: Create assessment
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/assessment'
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 200
+                  error:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: success
+                  data:
+                    $ref: '#/components/schemas/assessment'
         '404':
           description: not found
           content:
@@ -338,7 +342,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/assessment'
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 200
+                  error:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: success
+                  data:
+                    $ref: '#/components/schemas/assessment'
   /news:
     get:
       tags:
@@ -466,36 +482,42 @@ components:
         id:
           type: string
           example: yj5pc_LARC_AgK61
-        D:
-          type: array
-          minItems: 7
-          maxItems: 7
-          items:
-            type: number
-            minimum: 0
-            maximum: 3
-          example: [3, 3, 3, 3, 1, 0, 1]
-        A:
-          type: array
-          minItems: 7
-          maxItems: 7
-          items:
-            type: number
-            minimum: 0
-            maximum: 3
-          example: [1, 0, 2, 1, 1, 2, 0]
-        S:
-          type: array
-          minItems: 7
-          maxItems: 7
-          items:
-            type: number
-            minimum: 0
-            maximum: 3
-          example: [3, 3, 3, 3, 1, 0, 1]
-        keluhanTambahan:
+        userId:
           type: string
-          example: "Saya merasa sulit akhir-akhir ini dan sering cemas tentang pekerjaan saya"
+          example: bwyec_LARC_AgK61
+        assessment:
+          type: object
+          properties:
+            D:
+              type: array
+              minItems: 7
+              maxItems: 7
+              items:
+                type: number
+                minimum: 0
+                maximum: 3
+              example: [3, 3, 3, 3, 1, 0, 1]
+            A:
+              type: array
+              minItems: 7
+              maxItems: 7
+              items:
+                type: number
+                minimum: 0
+                maximum: 3
+              example: [1, 0, 2, 1, 1, 2, 0]
+            S:
+              type: array
+              minItems: 7
+              maxItems: 7
+              items:
+                type: number
+                minimum: 0
+                maximum: 3
+              example: [3, 3, 3, 3, 1, 0, 1]
+            keluhanTambahan:
+              type: string
+              example: "Saya merasa sulit akhir-akhir ini dan sering cemas tentang pekerjaan saya"
         hasil:
           type: object
           properties:
@@ -532,7 +554,10 @@ components:
                   minimum: 0
                   maximum: 100
                   example: 60
-        date:
+            rekomendasi:
+              type: string
+              example: "Mengambil istirahat dan minum obat"
+        createdAt:
           type: string
           format: date-time
           example: 2022-01-01T00:00:00.000Z
